src/time/Countdown.css
.countdown-div {
	/* background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
	box-sizing: border-box;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;

	min-height: 20vh;
	margin: 0;
}

.countdown-wrapper {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
	gap: "1rem";
}

.countdown-item {
	font-size: 40px;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
    line-height: 30px;
	position: relative;
	width: 100px;	
}

.countdown-item span {
	font-size: 12px;
	font-weight: 600;
	text-transform: uppercase;
}

.countdown-svg {
	position: absolute;
	top: 0;
	left: 0;
	width: 100px;
	height: 100px;
}

